
    - Improved the ActionsTool so that permission checking for actions
      is done in the context of the object for all categories that start
      with 'object' or 'workflow', in the context of the folder for
      those that start with 'folder', and in the context of the portal
      otherwise. This is useful for admin-defined additional categories.

  Bug Fixes

    - Fixed WorkflowTool so that it doesn't pretend to workflow non-CMF
      objects (Collector #19).

    - Removed redundant block of code from CMFDefault/Link.py (Collector
      #18).

    - Fixed discussion tree display not to embed entire HTML document
      (Collector #17, thanks to Jeffrey Shell for the inspiration).

    - Fixed CookieCrumbler to emit "Basic" and not "basic" auth as per
      HTTP spec (Collector #14, thanks to Simon Eisenmann for the
      report). This fixes some WebDAV locking problems with (rightfully)
      picky clients, like ExternalEditor.

    - Made old ListCriterion instances forward-compatible across earlier
      addition of 'operator' field.

    - Defaulted CMFCore.MembershipTool's createMemberArea flag to true,
      to preserve existing behavior:  member area should be created by
      default on first login (Collector #5).

    - Hardened DefaultDublinCoreImpl's EffectiveDate() and
      ExpirationDate() methods to deal better with older / uninitialzed
      content.

    - Refactored content construction in the Types tool to make
      cataloguing and workflow notification more uniform.

    - Made Undo work again by removing any LF in transaction ids.

    - Made WorkflowTool.updateRoleMappings update security-related
      indexes.

    - Append '/' to links in skin templates to the root of the site, to
      pacify clients which won't send Basic Auth tokens because the path
      doesn't match.

    - Removed the binding of Folder and Topic types to the default
      workflow for newly-created CMFSites (Collector #4).  Note that