@@ -234,6 +234,12 @@ class File( OFS.Image.File
                            'attachment; filename=%s' % self.getId())
         return OFS.Image.File.index_html(self, REQUEST, RESPONSE)
 
+    security.declareProtected(CMFCorePermissions.ModifyPortalContent, 'PUT')
+    def PUT(self, REQUEST, RESPONSE):
+        """ Handle HTTP (and presumably FTP?) PUT requests """
+        OFS.Image.File.PUT( self, REQUEST, RESPONSE )
+        self.reindexObject()
+
 
 InitializeClass(File)
 
