@@ -43,6 +43,8 @@ CMF 1.3
 
   Bug Fixes
 
+    - Fixed Image and File so that they reindex on PUT.
+
     - Fixed WorkflowTool so that it doesn't pretend to workflow non-CMF
       objects (Collector #19).
 
